# invoice_extractor

./: README.md  config_file.yaml  pyproject.toml
notebooks/: exploration.ipynb
output/: output.xlsx
scripts/: run_extractor.py
src/invoice_extractor/: __init__.py
src/invoice_extractor/config/: config.py
src/invoice_extractor/pdf_reader/: reader.py
src/invoice_extractor/text_extractor/: extractor.py
src/invoice_extractor/utils/: utils.py
